methods.basics.Methods.scala.error
Compilation error:
Methods:13: error: value && is not a member of Int
  if(x=0 && isCarryingBaggle()){
         ^Methods:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x=0 && isCarryingBaggle()){
      ^